@@ -791,14 +791,16 @@ This should only be used to set a low thread count for testing on
 very small memory computers.
 
 .TP
-\fB\-t\fR, \fB\-\-time\fR=\fIminutes\fR
-Establish a time limit to terminate the job after the specified number of 
-minutes. If the job's time limit exceeds the partition's time limit, the 
+\fB\-t\fR, \fB\-\-time\fR=\fItime\fR
+Establish a time limit to terminate the job after the specified period of
+time. If the job's time limit exceeds the partition's time limit, the 
 job will be left in a PENDING state. The default value is the partition's 
 time limit. When the time limit is reached, the job's processes are sent 
 SIGTERM followed by SIGKILL. The interval between signals is specified by 
 the SLURM configuration parameter \fBKillWait\fR. A time limit of 0 minutes
-indicates that an infinite timelimit should be used.
+indicates that an infinite timelimit should be used. 
+Acceptable time formats include "minutes", "minutes:seconds", 
+"hours:minutes:seconds" and "days-hours:minutes:seconds".
 
 .TP
 \fB\-\-task\-epilog\fR=\fIexecutable\fR
