@@ -393,7 +393,7 @@ static void _opt_default()
 	opt.max_nodes = 0;
 	opt.tasks_per_node   = -1;
 	opt.nodes_set = false;
-	opt.time_limit = -1;
+	opt.time_limit = 0;
 	opt.partition = NULL;
 
 	opt.job_name = NULL;
@@ -474,7 +474,7 @@ env_vars_t env_vars[] = {
   {"SBATCH_NO_ROTATE",     OPT_BOOL,       &opt.no_rotate,     NULL           },
   {"SBATCH_PARTITION",     OPT_STRING,     &opt.partition,     NULL           },
   {"SBATCH_RAMDISK_IMAGE", OPT_STRING,     &opt.ramdiskimage,  NULL           },
-  {"SBATCH_TIMELIMIT",     OPT_INT,        &opt.time_limit,    NULL           },
+  {"SBATCH_TIMELIMIT",     OPT_STRING,     &opt.time_limit_str,NULL           },
   {"SBATCH_EXCLUSIVE",     OPT_EXCLUSIVE,  NULL,               NULL           },
   {NULL, 0, NULL, NULL}
 };
@@ -1040,7 +1040,8 @@ static void _set_options(int argc, char **argv)
 			opt.shared = 1;
 			break;
 		case 't':
-			opt.time_limit = _get_int(optarg, "time");
+			xfree(opt.time_limit_str);
+			opt.time_limit_str = xstrdup(optarg);
 			break;
 		case 'u':
 			_usage();
@@ -1272,7 +1273,13 @@ static bool _opt_verify(void)
 
 	} /* else if (opt.nprocs_set && !opt.nodes_set) */
 
-	if (opt.time_limit == 0)
+	if (opt.time_limit_str) {
+		opt.time_limit = time_str2mins(opt.time_limit_str);
+		if (opt.time_limit < 0) {
+			error("Invalid time limit specification");
+			exit(1);
+		}
+	} else
 		opt.time_limit = INFINITE;
 
 	if ((opt.euid != (uid_t) -1) && (opt.euid != opt.uid)) 
